fixed layout issues in all browsers.

--- a/css/px-vis-timeseries.css
+++ b/css/px-vis-timeseries.css
@@ -577,6 +577,9 @@ a {
 .safariFlex {
   display: -webkit-flex; }
 
+.safariInlineFlex {
+  display: -webkit-inline-flex; }
+
 .safariFlexDirectionRow {
   -webkit-flex-direction: row; }
 
